# tarpaulin

./: Cargo.toml
report-template/: prism.css  prism.js  source-tree.js  template.html
src/: config.rs  lib.rs  main.rs  traces.rs
src/config/: mod.rs  parse.rs  types.rs
src/report/: cobertura.rs  coveralls.rs  html_report.rs  mod.rs  types.rs
src/reporting/: cobertura.rs  coveralls.rs  html.rs  mod.rs  stdout.rs
templates/: base.html  template.html
