[package]
name        = "cargo-tarpaulin"
version     = "0.6.6"
authors     = ["Daniel McKenna <danielmckenna93@gmail.com>"]
description = "Cargo-Tarpaulin is a tool to determine code coverage achieved via tests"
repository  = "https://github.com/xd009642/tarpaulin"
readme      = "README.md"
license     = "MIT/Apache-2.0"
categories  = ["development-tools"]
keywords    = ["cargo", "cargo-subcommand", "testing"]
include     = ["report-template/*"]

[[bin]]
name = "cargo-tarpaulin"

[dependencies]
cargo               = "0.24"
chrono              = "0.4"
clap                = "2.31.2"
coveralls-api       = "0.3.3"
curl                = "0.4"
fallible-iterator   = "0.1.4"
gimli               = "0.16.0"
lazy_static         = "1.0"
libc                = "0.2.40"
memmap              = "0.6.2"
nix                 = "0.11.0"
object              = "0.9"
proc-macro2         = "0.4.6"
regex               = "1.0"
rustc-demangle      = "0.1.7"
serde               = "1.0"
serde_derive        = "1.0"
serde_json          = "1.0"
syn                 = { version = "0.14.4", features = ["full"]}
syntex_syntax       = "0.59.1"
tera                = "0.10"
walkdir             = "2"

